# tether

./: .gitignore  README.md  pyproject.toml
.github/: test.yml
.github/workflows/: docs.yml  test.yml
benchmarks/: bechmark_sota.py  benchmark_sota.py
docs/: conf.py  modules.rst  tether.functional.rst  tether.kernels.rst  tether.nn.rst
examples/: train_cifar.py
src/tether/data/: encoding.py
src/tether/kernels/: alif.py  attention.py  encoding.py  linear_lif.py
src/tether/nn/: attention.py  linear_lif.py  surrogates.py
tests/: test_streaming_equivalence.py
