[project]
name = "tetherpy"
version = "0.0.1"
description = "Triton-powered framework for training and deploying Spiking Transformers."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy", "torch", "triton"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = ["pytest>=9.0.2"]

[tool.hatch.build.targets.wheel]
packages = ["src/tetherpy"]


[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install build && python -m build"
